# msss-backend

./: .env  .gitignore  Dockerfile  api.py  note.txt  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/: answer_cache.json  api.py  cache_vector_store.json  vector.py
backend/css/: style.css
backend/data/: address.txt  fees.txt  ncert_chemistry.txt  ncert_physics.txt  social_studies.txt  staff.txt
backend/faiss_index/: index.pkl
frontend/data/: ncert_math.txt
www.moderncbsechennai.com/: _redirects  api.py  index.html  vector.py
www.moderncbsechennai.com/faiss_index/: index.faiss
www.moderncbsechennai.com/js/: chat.js  config.js  main.js
www.moderncbsechennai.com/sessions/: session_20251022_130531.json
www.moderncbsechennai.com/vectorstore/address/: index.faiss  index.pkl
