[tool.poetry]
name = "msss-backend"
version = "0.1.0"
description = "MSSS backend deployment"
authors = ["Your Name <you@example.com>"]
python = "^3.13"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.119.1"
uvicorn = { version = "0.22.0", extras = ["standard"] }
langchain-ollama = "1.0.0"
langchain-community = "0.3.31"
ollama = "0.6.0"
pydantic = "2.11.10"
numpy = "2.3.4"
sympy = "1.12"
faiss-cpu = "1.12.0"
httpx = "0.28.1"
click = "8.3.0"
h11 = "0.16.0"
langchain-core = "1.0.0"
dataclasses-json = "0.6.7"
tenacity = "9.1.2"
PyYAML = "6.0.3"
SQLAlchemy = "2.0.44"
pydantic-settings = "2.11.0"
langsmith = "0.4.37"
httpx-sse = "0.4.3"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
